<resources>
    <string name="app_name">My Application</string>
    <string name="login">LOGIN</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="phonenumber">Enter phone number</string>
    <string name="forgot">Forgot Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_password">please enter password</string>
    <string name="login_succesfull">login successful</string>
    <string name="feature_comingsoon">login feature coming soon</string>
    <string name="he">male</string>
    <string name="she">female</string>
    <string name="other">other</string>
    <string name="Specify">Please Specify</string>
    <string name="password_length_should_be_between_6_and_10">password length should be between 6 and 10</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="GET_OTP">"GET OTP"</string>
    <string name="tvSignup">"SIGN UP"</string>


</resources>